--- a/spring-hello/build.gradle
+++ b/spring-hello/build.gradle
@@ -20,17 +20,27 @@ repositories {
 configurations.default]*.exclude(module:'commons-logging')
 
 dependencies {
+	/* 코어 */
 	compile group: 'org.springframework', name: 'spring-context', version: '4.3.9.RELEASE'
 	compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.9.RELEASE'
 	compile group: 'org.springframework', name: 'spring-jdbc', version: '4.3.9.RELEASE'
 	
+	/* 디비 */
 	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.42'
 	compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.1.1'
 	compile group: 'org.mybatis', name: 'mybatis', version: '3.4.4'
 	compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.1'
 	
+	/* 로거 */
 	compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
 	compile group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.25'
+	
+	/* AOP */
+	compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.10'
+	
+	/* 배열체크 */
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
+	
 	
 	
 	providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
